--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -925,6 +925,33 @@ DNS에서 사용되는 다양한 리소스 레코드 유형과 그 용도
 
 이러한 리소스 레코드들은 DNS의 기능과 관리를 효율적으로 지원하며, 각 레코드의 역할에 따라 DNS 변환이 정확하게 이루어집니다.
 
+---
+
+도메인 이름은 다음과 같은 세 부분으로 구성됩니다:
+
+1. TLD (최상위 도메인):
+
+   - 예: www.google.com의 경우 .com.
+   - 기능: 도메인 이름의 마지막 부분으로, 인터넷에서 도메인의 유형이나 국가를 나타냅니다.
+   - 관리: ICANN(Internet Corporation for Assigned Names and Numbers)에서 관리합니다. TLD의 예로는 .com, .net, .edu, 국가별 TLD인 .de, .cn, 그리고 최근의 배너티 TLD인 .museum, .pizza 등이 있습니다.
+
+2. 도메인:
+
+   - 예: www.google.com의 경우 google.
+   - 기능: TLD 네임서버에서 권한 네임서버로 컨트롤이 이동하는 위치를 구분하며, 일반적으로 ICANN 외부의 독립된 조직에서 관리합니다. 도메인은 개인이나 회사가 등록하고 선택할 수 있으며, TLD로 끝나야 합니다.
+
+3. 하위 도메인:
+
+   - 예: www.google.com의 경우 www.
+   - 기능: 등록된 도메인의 하위 구분을 나타내며, 특정 호스트에 할당된 경우 호스트 이름이라고도 합니다. 하위 도메인은 등록기관에 공식 등록되지 않고도 자유롭게 선택하고 할당할 수 있습니다.
+
+정규화된 도메인 이름 (FQDN):
+
+- 전체 도메인 이름을 구성하는 모든 부분을 포함하며, host.sub.sub.subdomain.domain.com과 같은 형태로 매우 긴 수준을 가질 수 있습니다.
+- 기술적으로는 최대 127개의 도메인 수준을 지원하며, 각 부분은 최대 63자까지 가능하고 전체 FQDN은 255자까지 제한됩니다.
+
+이러한 구성 요소들은 도메인 이름을 정확하게 정의하고, 인터넷에서의 위치와 관리에 중요한 역할을 합니다.
+
 #### Dynamic Host Configuration Protocol (동적 호스트 구성 프로토콜)
 
 #### Network Address Translation (네트워크 주소 변환)
