--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -983,7 +983,32 @@ DNS에서 사용되는 다양한 리소스 레코드 유형과 그 용도
 
 이러한 구조는 DNS 시스템의 관리와 안정성을 높이는 데 도움을 줍니다.
 
+---
+
 #### Dynamic Host Configuration Protocol (동적 호스트 구성 프로토콜)
+
+1. DHCP의 역할:
+
+   - 네트워크에서 호스트의 IP 주소, 서브넷 마스크, 기본 게이트웨이, DNS 서버 등의 구성을 자동화합니다.
+   - 이를 통해 많은 네트워크 기기를 효율적으로 관리할 수 있습니다.
+
+2. DHCP의 장점:
+
+   - 자동화: 컴퓨터가 네트워크에 연결할 때 DHCP 서버에 쿼리하여 네트워크 구성을 자동으로 받습니다.
+   - IP 관리: IP 주소를 수동으로 관리하지 않아도 되며, IP 주소 범위를 설정해 클라이언트 기기에 자동으로 IP를 할당합니다.
+
+3. DHCP의 할당 방식:
+
+   - 동적 할당: IP 주소 범위를 설정하고, 기기마다 새로운 IP를 할당할 수 있습니다.
+   - 자동 할당: 동적 할당과 유사하지만, 과거에 할당된 IP를 기억하여 가능한 한 동일한 IP를 다시 할당합니다.
+   - 고정 할당: 특정 MAC 주소와 IP 주소를 매핑하여, 지정된 MAC 주소를 가진 기기에만 고정된 IP를 할당합니다.
+
+4. 기타 기능:
+
+   - DHCP를 통해 IP 주소 외에도 NTP 서버와 같은 다른 네트워크 설정을 자동으로 할당할 수 있습니다.
+   - NTP(Network Time Protocol)는 네트워크의 모든 컴퓨터에서 시간을 동기화하는 데 사용됩니다.
+
+DHCP는 네트워크에서 IP 주소를 효율적으로 관리하고 자동으로 구성하는 데 중요한 역할을 합니다.
 
 #### Network Address Translation (네트워크 주소 변환)
 
