--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1041,6 +1041,14 @@ NAT(네트워크 주소 변환)는 IP 주소를 다른 IP 주소로 변환하는
 
 ---
 
+NAT(네트워크 주소 변환)는 단일 IP 주소를 통해 수백, 수천 대의 컴퓨터의 아웃바운드 트래픽을 관리하는 기술로, 전송 계층에서는 조금 더 복잡한 작업이 필요합니다. NAT는 아웃바운드 연결에서 각 클라이언트의 소스 포트를 유지하면서 라우터가 자신의 IP 주소로 변환합니다. 이렇게 하면 응답 트래픽이 다시 올 때, 라우터는 어떤 응답이 어떤 컴퓨터로 가야 하는지 알 수 있습니다.
+
+포트 보존 기술을 사용하여 클라이언트가 선택한 소스 포트가 라우터에서도 동일하게 사용되도록 설정합니다. 만약 여러 컴퓨터가 같은 포트를 선택하게 되면, 라우터는 사용되지 않은 포트를 임의로 선택하여 충돌을 피합니다.
+
+또한, 포트 전달 기능을 통해 특정 포트로 들어오는 트래픽을 지정된 내부 노드로 전달할 수 있습니다. 예를 들어, 웹 서버(10.1.1.5)와 메일 서버(10.1.1.6)가 같은 외부 IP(192.168.1.1)를 공유하더라도, 서로 다른 포트를 사용하여 트래픽을 각각의 서버로 전달할 수 있습니다. 이 방식은 IP 매스커레이딩을 유지하면서 외부 사용자가 여러 서비스에 접근하는 방법을 단순화합니다.
+
+---
+
 #### VPN 및 프록시
 
 ### 인터넷에 연결
