--- a/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
+++ b/08. 강의/Google IT 지원 수료증 이수 과정/02. 컴퓨터 네트워킹의 모든 것.md
@@ -1257,7 +1257,21 @@ MAC 필터링: MAC 필터링을 사용하면 특정 기기(MAC 주소)만 네트
 
 IT 지원 전문가로서 네트워크 문제를 해결하는 기술과 도구를 배우고, Microsoft Windows, Mac OS, Linux에서 제공하는 도구를 사용해 네트워크 문제를 감지하고 해결하는 방법을 익힙니다. 마지막으로 클라우드와 IPv6 등 미래 네트워킹에 중요한 개념을 다룹니다.
 
+---
+
 ### 연결 확인하기
+
+네트워크 문제에서 가장 흔한 문제는 연결 설정 실패입니다. 서버에 연결할 수 없거나, 인터넷 접속이 안 되거나, LAN에는 연결되지만 인터넷에는 연결되지 않는 등의 상황이 있습니다. 이러한 문제를 해결하려면 먼저 문제의 원인을 진단하는 것이 중요합니다. ICMP(인터넷 제어 메시지 프로토콜)는 네트워크 문제를 진단하고, 트래픽이 차단된 이유를 출발지로 전달하는 데 사용됩니다. ICMP는 패킷 헤더와 데이터로 구성되며, 오류가 발생한 위치를 추적할 수 있도록 돕습니다.
+
+특히 ping 도구는 네트워크 문제 해결에 자주 사용되며, ICMP Echo Request 메시지를 전송하여 네트워크 연결 상태를 확인합니다. 대상 기기가 실행 중일 경우, ICMP Echo Reply 메시지를 보내 응답합니다. 명령줄에서 ping 명령을 실행하면 응답 시간, TTL, 메시지 크기 등의 정보를 확인할 수 있으며, 통계로 전송 및 수신된 패킷의 백분율과 평균 왕복 시간을 볼 수 있습니다. Linux와 Mac OS에서는 수동으로 중단할 때까지 ping 명령이 계속 실행되며, Windows에서는 기본적으로 4번만 요청을 전송합니다.
+
+---
+
+Traceroute는 네트워크 경로를 추적하고, 통신 경로에서 문제가 발생한 위치를 찾는 데 사용되는 유틸리티입니다. 네트워크 통신은 여러 중간 노드를 거치기 때문에, Traceroute는 각 라우터 홉에 대한 정보를 수집하여 경로를 따라가는 패킷의 이동 과정을 추적합니다.
+
+Traceroute는 TTL(Time to Live) 필드를 사용하여 패킷의 수명을 조절합니다. 처음 패킷의 TTL을 1로 설정하고, 다음 패킷의 TTL을 2로 설정하여 각 라우터를 지나면서 TTL이 0에 도달할 때 패킷이 삭제되고 ICMP Time Exceeded 메시지가 전송됩니다. 이를 통해 Traceroute는 각 홉의 왕복 시간과 IP 주소를 표시합니다.
+
+Linux와 MacOS에서는 Traceroute가 UDP 패킷을 전송하고, Windows에서는 ICMP echo request를 사용합니다. 또한, mtr(Linux, MacOS)과 pathping(Windows)은 Traceroute와 유사하지만, 장기간 동안 실행되어 네트워크 상태 변화를 추적할 수 있는 도구입니다. mtr은 실시간으로 데이터를 업데이트하고, pathping은 50초 동안 데이터를 수집한 후 최종 결과를 한 번에 제공합니다.
 
 ### DNS 심화 학습
 
